rgbds-0.6.1/test/asm/sym-collision.err
error: sym-collision.asm(26):
    Interpolated symbol "dork" does not exist
error: Assembly aborted (1 error)!
